Added default links